--- a/index.html
+++ b/index.html
@@ -16,97 +16,114 @@
 <body class="page theme_dark">
   <header class="header">
     <h1 class="header__title content-section">Карты подскажут</h1>
-    <div class="header__wrapper content-section">
-      <img class="header__image" src="./images/logo.svg" width="135" height="24"
-        alt="Логотип сайта - надпись 'Вёрстка'">
-      <div class="header__togglers-wrapper">
-        <button class="header__theme-button">Тёмная</button>
-        <button class="header__theme-button  header__theme-button_is-active">Светлая</button>
+    <nav class="header__menu content-section">
+      <div class="header__logo">
+        <svg xmlns="http://www.w3.org/2000/svg" width="135" height="25">
+          <use href="./images/logo.svg#logo"></use>
+        </svg>
       </div>
-    </div>
+      <ul class="header__theme-toggler">
+        <li class="header__theme-toggler-item">
+          <button class="header__theme-button header__theme-button_type_dark">Тёмная</button>
+        </li>
+        <li class="header__theme-button">
+          <button class="header__theme-button header__theme-button_type_light header__theme-button_is-active" disabled>Светлая</button>
+        </li>
+      </ul>
+    </nav>
   </header>
-  <main class="content">
-      <h2 class="heading content__title content-section">Креативный подход к решению проблем</h2>
-      <div class="content__text-block content-section">
-        <p class="content__paragraph">
-          Творческие кризисы, кажется, рано или поздно испытывает любой человек. Часто бывает так, 
-          что вы сталкиваетесь с проблемой, не можете решить её с первого раза и начинаете думать, 
-          что вообще ни на что не способны. Мозг запоминает эту модель поведения, и на следующий день 
-          вам не хочется делать вообще ничего — ведь всё равно ничего не получится.
-        </p>
-        <p class="content__paragraph">Как выйти из такого застоя? Есть разные варианты, мы поговорим об одном 
-          из самых креативных — колоде карт.
-        </p>
-      </div>
-      <h2 class="heading content__title content-section">Что это за колода</h2>
-      <div class="content__text-block content-section">
-        <p class="content__paragraph">
-          Тут могло бы быть что-то про пользу игры в «Дурака» или о высших арканах Таро, но у нас на 
-          примете другая колода. Она называется Oblique Strategies, или «Обходные стратегии». Первую 
-          колоду ещё в 1975 году создали композитор, музыкальный продюсер и один из основателей жанра 
-          эмбиент Брайан Ино и мультимедиа-художник Питер Шмидт.
-        </p>
-      </div>
-      <figure class="picture">
-        <img class="picture__img" src="./images/cards-1x.png" width="1440" height="849" 
-        alt="Рабочий стол с айфоном, ручкой и карточками с надписями">
-        <figcaption class="content__paragraph">Колода Oblique Strategies</figcaption>
-      </figure>
-      <div class="content__text-block content-section">
+  <main class="content content-section">
+    <h2 class="heading content__title">Креативный подход к решению проблем</h2>
+    <div class="content__text-block content__text-block_type_first-lettered">
       <p class="content__paragraph">
-          Oblique Strategies в основном используют музыканты, но колода подходит для преодоления творческого 
-          кризиса в любой сфере. Её рекомендуют писателям, продакт-менеджерам, художникам и разработчикам.
-  
-        </p>
-        <p class="content__paragraph">
-          Колода состоит из ста с лишним карточек, на которых написано всего по одной фразе. Часто — довольно 
-          абстрактной. Например, «Какую ошибку вы совершили в прошлый раз?» или «Замените двусмысленность на конкретику», 
-          или даже «Добавьте что-то ещё». Эти фразы и надо применять к проблеме или творческому блоку. Каким именно 
-          способом? Решаете только вы.
-        </p>
-      </div>
-      <h2 class="heading content__title content-section">Как работают «обходные стратегии»</h2>
-      <div class="content__text-block content-section">
-        <p class="content__paragraph">
-          Вот что сам Брайан Ино рассказывает о создании Oblique Strategies:
-        </p>
-          <blockquote class="content__blockquote">
-            «Эти карты появились, потому что я оказывался в рабочих ситуациях (особенно в звукозаписывающих студиях), 
-            когда из-за паники быстро забывал, что кроме самых очевидных решений были и другие — косвенные. И часто 
-            именно такие неочевидные способы выдавали гораздо более интересные результаты, чем решения „в лоб“».
-          </blockquote>
-          <p class="content__paragraph">
-            Таким образом, колода Ино поощряет нас видеть препятствия не как тупики, а как отправные точки для поиска 
-            более интересных решений.
-          </p>
-          <p class="content__paragraph">
-            И кстати, сейчас необязательно охотиться за редкими физическими колодами Oblique Strategies — тем более, 
-            что их моментально разбирают фанаты Ино. Есть довольно симпатичные веб-сайты с диджитал-эквивалентами карточек 
-            и приложения для 
-            <a class="content__link" href="https://apps.apple.com/us/app/oblique-strategies-se/id1104927011" target="_blank">iOS</a> 
-            и <a class="content__link" href="https://play.google.com/store/apps/details?id=com.monoloco.obliquestrategies&hl=en_US&gl=US&pli=1" target="_blank">Android</a>.
-          </p> 
-      </div> 
-      <div class="card content-block">
-        <p class="heading">
-          <span>Use an </span>
-          <span class="marked">old idea</span>
-        </p>
-        <p class="content__paragraph">Воспользуйтесь старой идеей</p>
-      </div>
-      <h2 class="heading content__title content-section">Кто пользовался Oblique Strategies</h2>
-      <div class="content__text-block content-section">
-        <ul class="list">
-          <li class="list__item">Кто пользовался Oblique Strategies</li>
-          <li class="list__item">Talking Heads и Дэвид Бирн в сольной карьере;</li>
-          <li class="list__item">Coldplay;</li>
-          <li class="list__item">MGMT.</li>
-        </ul>
-      </div>
+        Творческие кризисы, кажется, рано или поздно испытывает любой человек. Часто бывает так,
+        что вы сталкиваетесь с проблемой, не можете решить её с первого раза и начинаете думать,
+        что вообще ни на что не способны. Мозг запоминает эту модель поведения, и на следующий день
+        вам не хочется делать вообще ничего — ведь всё равно ничего не получится.
+      </p>
+      <p class="content__paragraph">Как выйти из такого застоя? Есть разные варианты, мы поговорим об одном
+        из самых креативных — колоде карт.
+      </p>
+    </div>
+    <h2 class="heading content__title">Что это за колода</h2>
+    <div class="content__text-block content__text-block_type_first-lettered">
+      <p class="content__paragraph">
+        Тут могло бы быть что-то про пользу игры в «Дурака» или о высших арканах Таро, но у нас на
+        примете другая колода. Она называется Oblique Strategies, или «Обходные стратегии». Первую
+        колоду ещё в 1975 году создали композитор, музыкальный продюсер и один из основателей жанра
+        эмбиент Брайан Ино и мультимедиа-художник Питер Шмидт.
+      </p>
+    </div>
+    <figure class="content__figure">
+      <picture>
+        <source 
+          srcset="./images/cards-1x.avif 1x,
+                  ./images/cards-2x.avif 2x" type="image/avif">
+        <source 
+          srcset="./images/cards-1x.webp 1x,
+                  ./images/cards-2x.webp 2x" type="image/webp">
+        <img class="content__picture" src="./images/cards-1x.png"
+          srcset="./images/cards-1x.png 1x,
+                  ./images/cards-2x.png 2x" 
+          width="1440" height="849"
+          alt="Рабочий стол с айфоном, ручкой и карточками с надписями" loading="lazy">
+      </picture>
+      <figcaption class="content__picture-caption">Колода Oblique Strategies</figcaption>
+    </figure>
+    <div class="content__text-block">
+      <p class="content__paragraph">
+        Oblique Strategies в основном используют музыканты, но колода подходит для преодоления творческого
+        кризиса в любой сфере. Её рекомендуют писателям, продакт-менеджерам, художникам и разработчикам.
+
+      </p>
+      <p class="content__paragraph">
+        Колода состоит из ста с лишним карточек, на которых написано всего по одной фразе. Часто — довольно
+        абстрактной. Например, «Какую ошибку вы совершили в прошлый раз?» или «Замените двусмысленность на конкретику»,
+        или даже «Добавьте что-то ещё». Эти фразы и надо применять к проблеме или творческому блоку. Каким именно
+        способом? Решаете только вы.
+      </p>
+    </div>
+    <h2 class="heading content__title">Как работают «обходные стратегии»</h2>
+    <div class="content__text-block content__text-block_type_first-lettered">
+      <p class="content__paragraph">
+        Вот что сам Брайан Ино рассказывает о создании Oblique Strategies:
+      </p>
+      <blockquote class="content__blockquote">
+        «Эти карты появились, потому что я оказывался в рабочих ситуациях (особенно в звукозаписывающих студиях),
+        когда из-за паники быстро забывал, что кроме самых очевидных решений были и другие — косвенные. И часто
+        именно такие неочевидные способы выдавали гораздо более интересные результаты, чем решения „в лоб“».
+      </blockquote>
+      <p class="content__paragraph">
+        Таким образом, колода Ино поощряет нас видеть препятствия не как тупики, а как отправные точки для поиска
+        более интересных решений.
+      </p>
+      <p class="content__paragraph">
+        И кстати, сейчас необязательно охотиться за редкими физическими колодами Oblique Strategies — тем более,
+        что их моментально разбирают фанаты Ино. Есть довольно симпатичные веб-сайты с диджитал-эквивалентами карточек
+        и приложения для
+        <a class="content__link" href="https://apps.apple.com/us/app/oblique-strategies-se/id1104927011"
+          target="_blank">iOS</a>
+        и <a class="content__link"
+          href="https://play.google.com/store/apps/details?id=com.monoloco.obliquestrategies&hl=en_US&gl=US&pli=1"
+          target="_blank">Android</a>.
+      </p>
+    </div>
+    <article class="content__card">
+      <h3 class="content__card-title heading">Use an <span class="colored-text">old idea</span></h3>
+      <p class=".content__card-subtitle">Воспользуйтесь старой идеей</p>
+    </article>
+    <h2 class="heading content__title">Кто пользовался Oblique Strategies</h2>
+    <div class="content__text-block">
+      <ul class="content__list">
+        <li class="content__item">Кто пользовался Oblique Strategies</li>
+        <li class="content__item">Talking Heads и Дэвид Бирн в сольной карьере;</li>
+        <li class="content__item">Coldplay;</li>
+        <li class="content__item">MGMT.</li>
+      </ul>
+    </div>
   </main>
   <footer class="footer">
-    <img class="footer__logo" src="./images/logo.svg" width="81" height="21" 
-    alt="Логотип сайта - надпись 'Вёрстка'">
+    <img class="footer__logo" src="./images/logo.svg" width="81" height="21" alt="Логотип сайта - надпись 'Вёрстка'">
   </footer>
 
   <!-- Раскомментируйте строчку ниже, когда вёрстка будет готова. Если вы назвали все классы. как нужно, переключатель темы будет работать -->
