Доделана вёрстка светлой темы

--- a/index.html
+++ b/index.html
@@ -123,11 +123,10 @@
     </div>
   </main>
   <footer class="footer">
-    <img class="footer__logo" src="./images/logo.svg" width="81" height="21" alt="Логотип сайта - надпись 'Вёрстка'">
+    <p class="footer__copyright">VЁRSTKA</p>
   </footer>
 
-  <!-- Раскомментируйте строчку ниже, когда вёрстка будет готова. Если вы назвали все классы. как нужно, переключатель темы будет работать -->
-  <!-- <script src="./scripts/theme-changer.js"></script> -->
+  <script src="./scripts/theme-changer.js"></script>
 </body>
 
 </html>
